translation-sprint-3-2022: - Translation part 3

--- a/src/app/pages/delivery-management/mitra-delivery-panel/edit/mitra-delivery-panel-edit.component.html
+++ b/src/app/pages/delivery-management/mitra-delivery-panel/edit/mitra-delivery-panel-edit.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Panel Mitra'"> <!-- // TODO -->
+  <page-content-header contentTitle="{{'delivery_management.panel_mitra.text1' | translate}}"> <!-- // TODO -->
   </page-content-header>
 
   <div class="content p-24">
@@ -9,33 +9,33 @@
         <div class="ayo-middle" fxLayout="row" style="margin-top: 25px;">
           <div fxLayout="row wrap" fxLayoutAlign="start" fxFlex="89">
             <mat-form-field fxFlex="25" class="orders dropdown" style="margin-right: 10px;">
-              <mat-select placeholder="Pilih Kurir" formControlName="courier"> <!-- // TODO -->
+              <mat-select placeholder="{{'delivery_management.panel_mitra.select_courier' | translate}}" formControlName="courier">
                 <mat-option *ngFor="let cr of listCourier" [value]="cr.id">{{ cr.name }}</mat-option>
               </mat-select>
               <mat-error class="mt-8 px-24"
                 *ngIf="formPanelMitra.controls['courier'].hasError('required') && formPanelMitra.controls['courier'].touched">
-                Jenis Kurir harus diisi. <!-- // TODO -->
+                {{'delivery_management.panel_mitra.courier_type' | translate}} {{'global.messages.mandatory_text' | translate}}
               </mat-error>
             </mat-form-field>
             <mat-form-field fxFlex="25" class="orders dropdown" style="margin-right: 10px;">
-              <mat-select placeholder="Pilih Layanan" formControlName="service"> <!-- // TODO -->
+              <mat-select placeholder="{{'delivery_management.panel_mitra.select_service' | translate}}" formControlName="service"> <!-- // TODO -->
                 <mat-option *ngFor="let service of listCourierServices" [value]="service.id">{{ service.name }}
                 </mat-option>
               </mat-select>
               <mat-error class="mt-8 px-24"
                 *ngIf="formPanelMitra.controls['service'].hasError('required') && formPanelMitra.controls['service'].touched">
-                Jenis Layanan harus diisi. <!-- // TODO -->
+                {{'delivery_management.panel_mitra.text2' | translate}} {{'global.messages.mandatory_text' | translate}}
               </mat-error>
             </mat-form-field>
             <div fxLayout="row" fxFlex="20" style="height: 35px;">
               <button *ngIf="!isDetail" mat-raised-button type="button" class="confirmation-button" fxFlex="100"
                 (click)="getPanelMitraList()">
-                ATUR PANEL MITRA <!-- // TODO -->
+                {{'delivery_management.panel_mitra.set_partner_panel' | translate}}
               </button>
             </div>
           </div>
           <div fxLayout="column" fxLayoutAlign="flex-end flex-end" fxFlex="10">
-            <small>Mitra Terpilih</small> <!-- // TODO -->
+            <small>{{'delivery_management.panel_mitra.selected_partner' | translate}}</small>
             <h1 style="margin-top: -4px;font-size: 30px;">{{ (allRowsSelected ? pagination.total :  selected.length) | rupiahFormaterWithoutRp }}</h1>
           </div>
         </div>
@@ -165,12 +165,12 @@
                 {{row.classification ? row.classification : '-'}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Kode Divisi" prop="division" [sortable]="false"> <!-- // TODO -->
+            <ngx-datatable-column name="{{'produk_prinsipal.division_code' | translate}}" prop="division" [sortable]="false"> <!-- // TODO -->
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 {{row.division ? row.division : '-'}}
               </ng-template>
             </ngx-datatable-column>
-            <ngx-datatable-column name="Wilayah" prop="region" [sortable]="false"> <!-- // TODO -->
+            <ngx-datatable-column name="{{'global.area.regional' | translate}}" prop="region" [sortable]="false"> <!-- // TODO -->
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 {{row.region ? row.region : '-'}}
               </ng-template>
