--- a/src/app/pages/delivery-management/courier-management/create/courier-create-managament.component.html
+++ b/src/app/pages/delivery-management/courier-management/create/courier-create-managament.component.html
@@ -171,7 +171,7 @@
             </div>
           </div>
           <div fxLayout="row" fxLayoutAlign="end start" fxFlex="1 0 auto" class="border-bottom">
-            <button mat-icon-button fxFlex="5" matTooltip="Hapus" (click)="deleteService(i)" matTooltipPosition="below"
+            <button mat-icon-button fxFlex="5" matTooltip="{{'global.button.delete' | translate}}" (click)="deleteService(i)" matTooltipPosition="below"
               class="secondary-text"> <!-- // TODO -->
               <mat-icon class="secondary-text">delete</mat-icon>
             </button>
@@ -179,12 +179,12 @@
         </div>
         <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px">
           <button mat-raised-button type="button" fxFlex="20" (click)="addNewService()">
-            <mat-icon>add</mat-icon>{{ ls.locale.delivery_management.daftar_kurir.text6 }}
+            <mat-icon>add</mat-icon>{{ 'delivery_management.daftar_kurir.text6' | translate }}
           </button>
         </div>
         <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px">
           <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
-            {{ ls.locale.global.button.save }}
+            {{ 'global.button.save' | translate }}
           </button>
         </div>
       </form>
