--- a/src/app/pages/delivery-management/courier-management/edit/courier-edit-management.component.html
+++ b/src/app/pages/delivery-management/courier-management/edit/courier-edit-management.component.html
@@ -57,7 +57,7 @@
               </mat-panel-title>
               <mat-panel-description>
                 <div fxLayout="row" fxLayoutAlign="end start" fxFlex="1 0 auto" *ngIf="!isDetail">
-                  <button mat-icon-button fxFlex="5" matTooltip="Hapus" (click)="deleteService(i)"
+                  <button mat-icon-button fxFlex="5" matTooltip="{{'global.button.delete' | translate}}" (click)="deleteService(i)"
                     matTooltipPosition="below" class="secondary-text"> <!-- // TODO -->
                     <mat-icon class="secondary-text">delete</mat-icon>
                   </button>
