--- a/src/app/pages/delivery-management/courier-management/index/courier-management.component.html
+++ b/src/app/pages/delivery-management/courier-management/index/courier-management.component.html
@@ -1,10 +1,10 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="ls.locale.delivery_management.daftar_kurir.text1">
+  <page-content-header contentTitle="{{'delivery_management.daftar_kurir.text1' | translate}}">
     <div class="button-row" fxLayout="row">
       <button style="width: 170px;" mat-raised-button aria-label="Login" type="button"
         [routerLink]="['/delivery','courier','create']">
-        <mat-icon>add</mat-icon>{{ ls.locale.global.button.add }}
+        <mat-icon>add</mat-icon>{{ 'global.button.add' | translate }}
       </button>
     </div>
   </page-content-header>
