--- a/src/app/pages/delivery-management/mitra-delivery-panel/create/mitra-delivery-panel-create.component.html
+++ b/src/app/pages/delivery-management/mitra-delivery-panel/create/mitra-delivery-panel-create.component.html
@@ -9,16 +9,16 @@
         <div class="ayo-middle" fxLayout="row" style="margin-top: 25px;">
           <div fxLayout="row wrap" fxLayoutAlign="start" fxFlex="89">
             <mat-form-field fxFlex="25" class="orders dropdown" style="margin-right: 10px;">
-              <mat-select placeholder="Pilih Kurir" formControlName="courier"> <!-- // TODO -->
+              <mat-select placeholder="{{'delivery_management.panel_mitra.select_courier' | translate}}" formControlName="courier"> <!-- // TODO -->
                 <mat-option *ngFor="let cr of listCourier" [value]="cr.id">{{ cr.name }}</mat-option>
               </mat-select>
               <mat-error class="mt-8 px-24"
                 *ngIf="formPanelMitra.controls['courier'].hasError('required') && formPanelMitra.controls['courier'].touched">
-                Jenis Kurir <!-- // TODO --> {{ ls.locale.global.messages.mandatory_text }}
+                {{'delivery_management.panel_mitra.courier_type' | translate}} {{ ls.locale.global.messages.mandatory_text }}
               </mat-error>
             </mat-form-field>
             <mat-form-field fxFlex="25" class="orders dropdown" style="margin-right: 10px;">
-              <mat-select placeholder="Pilih Layanan" formControlName="service"> <!-- // TODO -->
+              <mat-select placeholder="{{'delivery_management.panel_mitra.select_service' | translate}}" formControlName="service"> <!-- // TODO -->
                 <mat-option *ngFor="let service of listCourierServices" [value]="service.id">{{ service.name }}
                 </mat-option>
               </mat-select>
