--- a/src/app/pages/delivery-management/mitra-delivery-panel/index/mitra-delivery-panel.component.html
+++ b/src/app/pages/delivery-management/mitra-delivery-panel/index/mitra-delivery-panel.component.html
@@ -1,10 +1,10 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Panel Mitra'">
+  <page-content-header contentTitle="{{'delivery_management.panel_mitra.text1' | translate}}">
     <div class="button-row" fxLayout="row">
       <button style="width: 170px;" mat-raised-button aria-label="Login" type="button"
         [routerLink]="['/delivery','panel-mitra','create']">
-        <mat-icon>add</mat-icon>TAMBAH <!-- // TODO -->
+        <mat-icon>add</mat-icon>{{'global.button.add' | translate}}
       </button>
     </div>
   </page-content-header>
@@ -13,7 +13,7 @@
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-        <h2 class="pl-8">Daftar Kurir</h2> <!-- // TODO -->
+        <h2 class="pl-8">{{'delivery_management.panel_mitra.text1' | translate}}</h2>
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
@@ -26,16 +26,16 @@
         [count]="pagination.total" [limit]="pagination.per_page" [offset]="offsetPagination" [externalPaging]="true"
         [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)">
 
-        <ngx-datatable-column name="Nama Kurir" prop="delivery_courier_name"> <!-- // TODO -->
+        <ngx-datatable-column name="{{'delivery_management.daftar_kurir.text9' | translate}}" prop="delivery_courier_name"> <!-- // TODO -->
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <a class="direct-edit" (click)="directDetail(row)">{{row.delivery_courier_name}} </a>
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column name="Jenis Layanan" prop="delivery_courier_service_name"> <!-- // TODO -->
+        <ngx-datatable-column name="{{'delivery_management.panel_mitra.text2' | translate}}" prop="delivery_courier_service_name"> <!-- // TODO -->
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.delivery_courier_service_name}}
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column [width]="200" name="Jumlah Mitra" prop="mitra_count" summary-template="activeCell"> <!-- // TODO -->
+        <ngx-datatable-column [width]="200" name="{{'delivery_management.panel_mitra.text3' | translate}}" prop="mitra_count" summary-template="activeCell"> <!-- // TODO -->
         </ngx-datatable-column>
 
         <!-- <ngx-datatable-column [width]="100" name="Status" prop="status">
@@ -50,7 +50,7 @@
           </ng-template>
         </ngx-datatable-column> -->
 
-        <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
+        <ngx-datatable-column [width]="98" name="{{'global.label.action' | translate}}" headerClass="textright" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
             style="justify-content: center !important">
             <div class="button-row" style="margin-left: -10px">
