--- a/src/app/pages/notes-retailer/import-component/import-notes-dialog.component.html
+++ b/src/app/pages/notes-retailer/import-component/import-notes-dialog.component.html
@@ -24,9 +24,7 @@
         <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
           <mat-icon class="secondary-text s-48">attach_file</mat-icon>
           <br>
-          <span matPrefix>{{ls.locale.global.messages.file_browse_label}}
-            <strong>Pilih File</strong>
-          </span>
+          <span matPrefix>{{ls.locale.global.messages.file_browse_label}}</span>
         </div>
       </div>
       <div *ngIf="onLoad" class="responsive">
@@ -78,9 +76,9 @@
         <div fxFlexLayout="row" fxLayoutAlign="start center" fxLayout.lt-md="row" fxLayoutGap="20px"
           fxLayoutGap.lt-md="10px" fxFlex="1 0 auto">
           <button type="button" mat-raised-button color="primary" (click)="submit()"
-            [disabled]="rows.length === 0">{{ls.locale.global.button.send}}</button>
+            [disabled]="rows.length === 0">{{'global.button.send' | translate}}</button>
           <button type="button" mat-stroked-button color="primary" (click)="dialogRef.close()"
-            [disabled]="uploading">Batal</button>
+            [disabled]="uploading">{{'global.button.cancel' | translate}}</button>
         </div>
       </div>
     </div>
