--- a/src/app/pages/src-catalogue/user-src-catalogue/index/user-src-catalogue.component.html
+++ b/src/app/pages/src-catalogue/user-src-catalogue/index/user-src-catalogue.component.html
@@ -1,10 +1,10 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="ls.locale.katalog_src.pengguna.text2">
+  <page-content-header contentTitle="{{'katalog_src.pengguna.text2' | translate}}">
     <div class="button-row" fxLayout="row">
       <button style="width: 170px;" mat-raised-button aria-label="Login" type="button"
         [routerLink]="['/src-catalogue', 'users', 'create']">
-        <mat-icon>add</mat-icon>BUAT
+        <mat-icon>add</mat-icon>{{'global.button.add' | translate}}
       </button>
     </div>
   </page-content-header>
@@ -63,7 +63,7 @@
               <p class="status text-truncate h6 p-4"
                 style="min-width: 100px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;"
                 [ngClass]="row.status == 'active' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
-                {{row.status == 'active' ? 'Aktif' : 'Tidak Aktif'}}
+                {{row.status == 'active' ? ('global.label.active' | translate) : ('global.label.inactive' | translate)}}
               </p>
             </div>
           </ng-template>
@@ -74,7 +74,7 @@
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
             style="justify-content: center !important">
             <div class="button-row pl-8">
-              <button mat-icon-button color="" matTooltip="Ubah Produk" (click)="directEdit(row)">
+              <button mat-icon-button color="" matTooltip="{{'global.button.edit' | translate}}" (click)="directEdit(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
               <button mat-icon-button color="primary" (click)="deleteUser(row.id)">
