--- a/src/app/pages/user-management/private-label/supplier-settings/index/supplier-settings-index.component.html
+++ b/src/app/pages/user-management/private-label/supplier-settings/index/supplier-settings-index.component.html
@@ -1,5 +1,5 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
-  <page-content-header [contentTitle]="'Pengaturan Produk Prinsipal'">
+  <page-content-header [contentTitle]="ls.locale.produk_prinsipal.text26">
   </page-content-header>
 
   <div class="content p-24" *ngIf="!onLoad">
@@ -16,17 +16,17 @@
               <span>{{row.product_name || '-'}}</span>
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Kategori" prop="category_name">
+          <ngx-datatable-column name="{{ls.locale.produk_prinsipal.text11}}" prop="category_name">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               <span>{{row.category_name || '-'}}</span>
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Perusahaan" prop="category_name">
+          <ngx-datatable-column name="{{ls.locale.produk_prinsipal.text2}}" prop="category_name">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               <span>{{row.company_name || '-'}}</span>
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Stock Input GSW" prop="email" [sortable]="false">
+          <ngx-datatable-column name="{{ls.locale.produk_prinsipal.text29}}" prop="email" [sortable]="false">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               <div *ngFor="let setting of row.settings" fxLayout="row" fxLayoutAlign="center center">
                 <mat-checkbox [checked]="setting.value" [disabled]="true" class="mat-checkbox-payment active" *ngIf="setting.name == 'gsw_input' && setting.value"></mat-checkbox>
@@ -34,7 +34,7 @@
               </div>
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Mandatory GSW" prop="lastlogin" [sortable]="false">
+          <ngx-datatable-column name="{{ls.locale.produk_prinsipal.text30}}" prop="lastlogin" [sortable]="false">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               <div *ngFor="let setting of row.settings">
                 <mat-checkbox [checked]="setting.value" [disabled]="true" class="mat-checkbox-payment active" *ngIf="setting.name == 'gsw_input_mandatory' && setting.value"></mat-checkbox>
@@ -42,7 +42,7 @@
               </div>
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Stock Input GSR" prop="lastupdated" [sortable]="false">
+          <ngx-datatable-column name="{{ls.locale.produk_prinsipal.text31}}" prop="lastupdated" [sortable]="false">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               <div *ngFor="let setting of row.settings">
                 <mat-checkbox [checked]="setting.value" [disabled]="true" class="mat-checkbox-payment active" *ngIf="setting.name == 'gsr_input' && setting.value"></mat-checkbox>
@@ -50,7 +50,7 @@
               </div>
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Mandatory GSR" prop="status" [sortable]="false">
+          <ngx-datatable-column name="{{ls.locale.produk_prinsipal.text32}}" prop="status" [sortable]="false">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               <div *ngFor="let setting of row.settings">
                 <mat-checkbox [checked]="setting.value" [disabled]="true" class="mat-checkbox-payment active" *ngIf="setting.name == 'gsr_input_mandatory' && setting.value"></mat-checkbox>
@@ -66,28 +66,28 @@
               </div>
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Packs Per Box" prop="packs_per_box">
+          <ngx-datatable-column name="{{ls.locale.produk_prinsipal.text33}}" prop="packs_per_box">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               <div *ngFor="let setting of row.settings">
                 <span *ngIf="setting.name == 'packs_per_box'">{{setting.value || '0'}}</span>
               </div>
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Packs Per Bale" prop="packs_per_bale">
+          <ngx-datatable-column name="{{ls.locale.produk_prinsipal.text34}}" prop="packs_per_bale">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               <div *ngFor="let setting of row.settings">
                 <span *ngIf="setting.name == 'packs_per_bale'">{{setting.value || '0'}}</span>
               </div>
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Packs Per Slop" prop="packs_per_slop">
+          <ngx-datatable-column name="{{ls.locale.produk_prinsipal.text35}}" prop="packs_per_slop">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               <div *ngFor="let setting of row.settings">
                 <span *ngIf="setting.name == 'packs_per_slop'">{{setting.value || '0'}}</span>
               </div>
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column [width]="80" name="Tindakan" headerClass="textright" [sortable]="false">
+          <ngx-datatable-column [width]="80" name="{{ls.locale.global.label.action}}" headerClass="textright" [sortable]="false">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               <div class="button-row" style="margin-left: -10px">
                 <button mat-icon-button *ngIf="permission?.ubah" color="" (click)="directEdit(row)">
@@ -99,7 +99,7 @@
         </ngx-datatable>
       </div>
     </mat-tab>
-    <mat-tab label="Metode Pembayaran">
+    <mat-tab label="{{ls.locale.produk_prinsipal.text28}}">
       <div class="table-wrapper">
         <app-pay-method-index></app-pay-method-index>
       </div>
