--- a/src/app/pages/user-management/retailer/create/retailer-create.component.html
+++ b/src/app/pages/user-management/retailer/create/retailer-create.component.html
@@ -95,7 +95,7 @@
 
           <form [formGroup]="verticalStepperStep3">
 
-            <ng-template matStepLabel>Area</ng-template>
+            <ng-template matStepLabel>{{'global.area.area' | translate}}</ng-template>
             <!-- <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field fxFlex="100" class="is-light">
                 <input matInput type="text" placeholder="Area" formControlName="area">
@@ -209,11 +209,11 @@
 
             <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field fxFlex="100" class="is-light">
-                <mat-select placeholder="Internal Classification" formControlName="InternalClassification" (selectionChange)="classificationSelectionChange($event)">
+                <mat-select placeholder="{{'retailer.list.text3' | translate}}" formControlName="InternalClassification" (selectionChange)="classificationSelectionChange($event)">
                   <mat-option *ngFor="let item of listIC" [value]="item.value">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="verticalStepperStep4.controls['InternalClassification'].hasError('required') && verticalStepperStep4.controls['InternalClassification'].touched ">
-                  Internal Classification {{ls.locale.global.messages.mandatory_text}}
+                  {{'retailer.list.text3' | translate}} {{ls.locale.global.messages.mandatory_text}}
                 </mat-error>
               </mat-form-field>
             </div>
