--- a/src/app/shared/page-content-header/page-content-header.component.html
+++ b/src/app/shared/page-content-header/page-content-header.component.html
@@ -7,9 +7,9 @@
       <ng-container *ngFor="let breadcrumb of breadcrumbs">
         <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
         <span class="secondary-text s-16" *ngIf="breadcrumb.type == 'parent'">
-          <a routerLink="{{breadcrumb.url}}">{{breadcrumb.name}}</a>
+          <a routerLink="{{breadcrumb.url}}">{{breadcrumb.name | breadcrumbtranslate | async}}</a>
         </span>
-        <span class="secondary-text s-16" *ngIf="breadcrumb.type == 'current'">{{breadcrumb.name}}</span>
+        <span class="secondary-text s-16" *ngIf="breadcrumb.type == 'current'">{{breadcrumb.name | breadcrumbtranslate | async}}</span>
       </ng-container>
     </div>
     <div fxLayout="row" fxLayout.xs="column" class="middle-container" fxLayoutAlign="space-between center">
